--- a/Member/res/layout/list.xml
+++ b/Member/res/layout/list.xml
@@ -9,12 +9,13 @@
     android:maxHeight="50dip"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"     
+    android:adjustViewBounds="true"
     android:id="@+id/image"/>
     
 <TextView 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_alignBaseline="@id/image"
+    android:layout_toRightOf="@id/image"
     android:layout_margin="5dp"   
     android:id="@+id/tv1"/>
 
